[gd_scene load_steps=5 format=3 uid="uid://ce5wyoh03axt7"]

[ext_resource type="Script" uid="uid://csvrhwj22wue6" path="res://enemigos/enemy_shoot.gd" id="1_6l8qt"]
[ext_resource type="Texture2D" uid="uid://bq1ydjytlf4vt" path="res://assets/character/idle/idle1.png" id="1_253i6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3xpvn"]
radius = 9.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6l8qt"]
size = Vector2(527, 602.5)

[node name="EnemyShoot" type="CharacterBody2D"]
script = ExtResource("1_6l8qt")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_253i6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_3xpvn")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6l8qt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
